# HairShop

./: CMakeLists.txt  README.md
src/: electricProduct.cpp  electricProduct.h  hairShop.cpp  hairShop.h  main.cpp  product.cpp  product.h
